--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 gantt_builder/plan.xlsx
 gantt_builder/~$plan.xlsx
 gantt_builder/otchet.xlsx
+json_collapsible/table.html
+json_collapsible/data.json
