--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
-gantt_builder/plan.xlsx
-gantt_builder/~$plan.xlsx
-gantt_builder/otchet.xlsx
+gantt_builder/gantt_chart_1.html
+gantt_builder/gantt_chart_2.html
 json_collapsible/table.html
 json_collapsible/data.json
